modified some text

--- a/volatility/Volatility Modelling in Python.ipynb
+++ b/volatility/Volatility Modelling in Python.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "This tutorial demonstrates the use of Python tools and libraries applied to volatility modelling, more specifically the generalized autoregressive conditional heteroscedasticity (GARCH) model.\n",
     "\n",
-    "Working with financial data, we are often faced with processing time series, that is sequences of discrete time data (e.g. the daily closing value of a stock market index). To work with such data, we often use parametric models in the time-domain.\n",
+    "Working with financial data, we are often faced with processing time series, that is sequences of discrete time data (e.g. the daily closing value of a stock market index). To work with such data, we can use parametric models in the time domain.\n",
     "\n",
     "A GARCH model is essentially an autoregressive conditional heteroskedasticity model for which an autoregressive moving average model (ARMA model) is assumed for the error variance."
    ]
@@ -160,7 +160,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can see that some of the assets had prices back in the 60's but that many didn't. Let's keep dates for which we have data for every stock. We could also have done inner joins, but, first, we wanted to show the complete picture. (We leave it to the reader as an exercise do write inner joins.)"
+    "We can see that some of the assets had prices back in the 60's but that many others didn't. Let's drop the incomplete rows. We could have done inner joins instead of of an outer join followed by dropping incomplete rows, but we wanted to show the complete picture. (We leave it as an exercise to the reader to write inner joins.)"
    ]
   },
   {
@@ -907,7 +907,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
