--- a/volatility/Volatility Modelling in Python.ipynb
+++ b/volatility/Volatility Modelling in Python.ipynb
@@ -901,7 +901,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We see that there is very little autocorrelation for daily returns of the S&P 500 over this period. Let's look at the autocorrelation of the squared returns."
+    "We see that there is very little autocorrelation for daily returns of the portfolio over this period. Let's look at the autocorrelation of the squared returns."
    ]
   },
   {
