modified some text

--- a/volatility/Volatility Modelling in Python.ipynb
+++ b/volatility/Volatility Modelling in Python.ipynb
@@ -944,7 +944,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For the purpose of this tutorial, let's first build our own model. In this model, we consider one lag of returns squared and one lag of variance (1,1)."
+    "For the purpose of this tutorial, let's first build our own model. In this model, we consider one lag of squared returns and one lag of variance (1,1)."
    ]
   },
   {
@@ -1136,9 +1136,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "In the next tutorial, we will use this model to forecast 24-hour return volatilities."
-   ]
+   "source": []
   }
  ],
  "metadata": {
